# mathformula

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
examples/: Makefile  Makefile.am  Makefile.in  test.c  test2.c
examples/.deps/: test.Po
include/: mathformula.h  pstring.h
src/: Makefile  Makefile.am  Makefile.in  build.sh  mathformula.c  mathformula.h  pstring.c  pstring.h  sum.c
src/.deps/: mathformula.Plo  mathformula.Po  pstring.Plo  pstring.Po
