#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([libmathformula], [2.0.0], [pyqhaoku@163.com])
AC_CONFIG_SRCDIR([src/pstring.c])
AC_CONFIG_HEADERS([config.h])

PACKAGE=libmathformula
LIBMATHFORMULA_MAJOR_VERSION=2
LIBMATHFORMULA_MINOR_VERSION=0
LIBMATHFORMULA_MICRO_VERSION=0

VERSION=$LIBMATHFORMULA_MAJOR_VERSION.$LIBMATHFORMULA_MINOR_VERSION.$LIBMATHFORMULA_MICRO_VERSION
VERSION_INFO=`expr $LIBMATHFORMULA_MAJOR_VERSION + $LIBMATHFORMULA_MINOR_VERSION`:$LIBMATHFORMULA_MICRO_VERSION:$LIBMATHFORMULA_MINOR_VERSION

AC_SUBST(VERSION_INFO)
AC_SUBST(LIBMATHFORMULA_MAJOR_VERSION)
AC_SUBST(LIBMATHFORMULA_MINOR_VERSION)
AC_SUBST(LIBMATHFORMULA_MICRO_VERSION)

# Define those values into C code
AC_DEFINE_UNQUOTED([LIBMATHFORMULA_MAJOR_VERSION], $LIBMATHFORMULA_MAJOR_VERSION, [Major version])
AC_DEFINE_UNQUOTED([LIBMATHFORMULA_MINOR_VERSION], $LIBMATHFORMULA_MINOR_VERSION, [Minor version])
AC_DEFINE_UNQUOTED([LIBMATHFORMULA_MICRO_VERSION], $LIBMATHFORMULA_MICRO_VERSION, [Micro version])

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)


# Checks for programs.

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_LIBTOOL

LT_INIT
AC_SUBST(LIBTOOL_DEPS)

# Checks for libraries.

# FIXME: Replace `main' with a function in `-lm':
#AC_CHECK_LIB([m], [main])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset strdup strstr])

AC_CONFIG_FILES([Makefile
				 src/Makefile
				 examples/Makefile])
AC_OUTPUT
